# agent-greenroom

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: release.yml  rust.yml
.opencode/: opencode.json
scripts/: install.sh
skills/: agent-greenroom-codex.md  agent-greenroom-opencode.md  agent-greenroom.md
skills-workspace/: grade.py  trigger_eval.json
skills-workspace/iteration-1/: benchmark.json  benchmark.md  feedback.json
skills-workspace/iteration-1/eval-1/: eval_metadata.json
skills-workspace/iteration-1/eval-1/with_skill/run-1/: grading.json  timing.json
skills-workspace/iteration-1/eval-1/with_skill/run-1/outputs/: answer.json
skills-workspace/iteration-1/eval-1/without_skill/run-1/: grading.json  timing.json
skills-workspace/iteration-1/eval-1/without_skill/run-1/outputs/: answer.json
skills-workspace/iteration-1/eval-2/: eval_metadata.json
skills-workspace/iteration-1/eval-2/with_skill/run-1/: grading.json  timing.json
skills-workspace/iteration-1/eval-2/without_skill/run-1/: grading.json  timing.json
skills-workspace/iteration-1/eval-3/: eval_metadata.json
skills-workspace/iteration-1/eval-3/with_skill/run-1/: grading.json  timing.json
skills-workspace/iteration-1/eval-3/without_skill/run-1/: grading.json  timing.json
skills-workspace/skill-snapshot/: agent-greenroom.md
skills/evals/: evals.json
spec/: SPEC.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/registry/: channel.rs  error.rs  identity.rs  mod.rs  registry.rs
src/server/: mcp.rs  mod.rs  params.rs
(+4 files in other folders)
