[package]
name = "agent-greenroom"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp              = { version = "1", features = ["server", "macros", "transport-streamable-http-server"] }
tokio             = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
schemars          = "1"
uuid              = { version = "1", features = ["v4", "serde"] }
thiserror         = "1"
anyhow            = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum              = "0.8"
tokio-util        = "0.7"
